[package]
name = "ezpdb"
version = "0.1.0"
authors = ["Lander Brandt <landerbrandt@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ezpdb"
path = "src/lib.rs"

[[bin]]
name = "pdbview"
path = "src/bin.rs"

[dependencies]
pdb = "0.7"
structopt = "0.3"
thiserror = "1.0"
log = "0.4"
simplelog = { version = "0.8", optional = true }
anyhow = { version = "1.0", optional = true }
serde = { version = "1.0", features = ['derive', 'rc'], optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = ["cli", "serde"]
cli = ["serde_json", "anyhow", "simplelog"]
