[package]
name = "pdbview"
version = "0.4.0"
authors = ["Lander Brandt <landerbrandt@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/landaire/pdbview"
description = "Microsoft program debug database (PDB) file information utility"

[[bin]]
name = "pdbview"
path = "crates/bin/main.rs"

[workspace]
members = [
    'crates/ezpdb'
]

[dependencies]
pdb = "0.7"
structopt = "0.3"
thiserror = "1.0"
log = "0.4"
ezpdb = { version = "0.4", path = "crates/ezpdb", features = ['serde']}
simplelog = "0.8"
anyhow = "1.0"
serde_json = "1.0"

[patch.crates-io]
pdb = { git = "https://github.com/landaire/pdb"}
