[package]
name = "ezpdb"
version = "0.1.0"
authors = ["Lander Brandt <landerbrandt@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/landaire/pdbview"
description = "Microsoft program database (PDB) file information utility"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pdb = "0.7"
thiserror = "1.0"
log = "0.4"
serde = { version = "1.0", features = ['derive', 'rc'], optional = true }